ajouter les images et la description

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Experiences</span></a></li>
-          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Skills</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Compétences</span></a></li>
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
+          <li><a href="#editeur" class="nav-link scrollto"><i class="bx bx-edit"></i> <span>mes éditeurs</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -77,8 +78,7 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
-        <div class="section-title">
+        <div class="section-title fw-bold">
           <h2>A propos de moi</h2>
           <p>
             Je suis <i>KHADIM NIASS</i>, Un passionné du web. En tant que développeur web
@@ -111,9 +111,21 @@
                 </ul>
               </div>
             </div>
-            <p>
+            <!-- <p>
               Je suis quelqu'un de motivé qui aime se faire challenge, tout ce qui tourne autour du monde du numérique m'interresse.
               En particulier le développement. J'utilise mes temps libre à l'apprentissage de nouvelles technologies.
+            </p> -->
+            <p> 
+              Je suis Khadim Niass titulaire d’un baccalauréat en série S1 (Mathématiques, Sciences Physiques) depuis 2017 à la session normale.
+
+              je suis également titulaire d'une Licence professionnelle en mathématiques informatiques appliquées et un certificat en développement web full stack web/mobile 
+
+              Passionné par l’univers du numérique et doté d’une grande curiosité, Polyvalent et fort près de 5 ans de connaissance dans le domaine de l'informatique. 
+
+              Je suis capable de mettre un place une application web ou mobile de A à Z selon les besoins du client.
+              Je suis également doté d'une compréhension rapide, je m'adapte facilement dans un nouveau environnement.
+              J'aime me lancer des défis et faire toujours de nouveaux challenges 
+              J'ai également l'habitude de travailler en groupe.
             </p>
           </div>
         </div>
@@ -421,6 +433,41 @@
       <img src="assets/img/accuil_git.png" alt="accuil github" class="img-fluid">
     </div>
 
+     <!-- ======= begin éditeur ======= -->
+     <section id="editeur" class="services">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>mes éditeurs favoris</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <h4 class="title"><a href="">PHPSTORM</a></h4>
+            <p class="description">
+                <img src="" alt="PHPSTORM">
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 class="title"><a href="">INTELIJ</a></h4>
+            <p class="description">
+                <img src="" alt="intelIj">
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <h4 class="title"><a href="">VISUAL STUDIO</a></h4>
+              <p>
+                <img src="" alt="vscod">
+              </p>
+          </div>
+            <h4 class="title"><a href="">WEBSTORM</a></h4>
+              <p>
+                <img src="" alt="webstorm">
+              </p>
+          </div>
+      </div>
+    </section><!-- End éditeur -->
+
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
@@ -450,6 +497,7 @@
         
       </div>
     </section><!-- End Services Section -->
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
