editeurs de text

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <section id="about" class="about">
       <div class="container">
         <div class="section-title fw-bold">
-          <h2>A propos de moi</h2>
+          <h2><i class="bx bx-user"></i> A propos de moi</h2>
           <p>
-            Je suis <i>KHADIM NIASS</i>, Un passionné du web. En tant que développeur web
+            En tant que développeur web fullstack, Je suis <i>KHADIM NIASS</i>, Un passionné de la technologie.
           </p>
         </div>
 
@@ -97,7 +97,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 Juin 1998</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 Juin 1998</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+221 77 195 87 13</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Addresse:</strong> <span>Dakar,</span></li>
                 </ul>
@@ -518,27 +518,29 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <h4 class="title"><a href="">PHPSTORM</a></h4>
-            <p class="description">
-                <img src="" alt="PHPSTORM">
+            <h4 class="title">PHPSTORM</h4>
+            <p class="text-center">
+                <img width="50" height="60" src="assets/img/editeurs/ps.png" alt="PHPSTORM">
             </p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <h4 class="title"><a href="">INTELIJ</a></h4>
-            <p class="description">
-                <img src="" alt="intelIj">
+          <div class="col-lg-4 col-md-6 icon-box text-center" data-aos="fade-up" data-aos-delay="100">
+            <h4 class="title">INTELIJ</h4>
+            <p class="">
+                <img width="50" height="60" src="assets/img/editeurs/ij.jpg" alt="intelIj">
             </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <h4 class="title"><a href="">VISUAL STUDIO</a></h4>
-              <p>
-                <img src="" alt="vscod">
+            <h4 class="title">VISUAL STUDIO</h4>
+              <p class="text-center">
+                <img width="50" height="60" src="assets/img/editeurs/vscode.png" alt="vscod">
               </p>
           </div>
-            <h4 class="title"><a href="">WEBSTORM</a></h4>
+          <div class="text-center">
+            <h4 class="title">WEBSTORM</h4>
               <p>
-                <img src="" alt="webstorm">
+                <img width="50" height="60" src="assets/img/editeurs/ws.png" alt="webstorm">
               </p>
+            </div>  
           </div>
       </div>
     </section><!-- End éditeur -->
