ajouter les projets en entier et le et les liens de projets

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
       <div class="profile">
         <!-- photo du dahbord -->
-        <img src="assets/img/my_puctures/dashbord_Khadim Niass.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/my_puctures/menu.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">KHADIM NIASS</a></h1>
         <div class="social-links mt-3 text-center">
-          <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-          <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+          <a href="https://stackoverflow.com/users/18308310/khadim-niass" class="stack-overflow"><i class="bx bxl-stack-overflow"></i></a>
+          <a href="https://gitlab.com/niassssn" class="gitlab"><i class="bx bxl-gitlab"></i></a>
           <a href="live:.cid.35917ce0ce1e8434" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://linkedin.com/in/khadim-niass" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/khadimniass?tab=repositories" class="github"><i class="bx bxl-github"></i></a>
@@ -81,6 +81,7 @@
           <h2><i class="bx bx-user"></i> A propos de moi</h2>
           <p>
             En tant que développeur web fullstack, Je suis <i>KHADIM NIASS</i>, Un passionné de la technologie.
+            <a href="#projet">Visiter mes projets</a>
           </p>
         </div>
 
@@ -209,16 +210,17 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- --------------------------------------------------------------------------- -->
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
-              <span class="skill">JAVA-Spring Boot <i class="val">95%</i></span>
+              <span class="skill">jQuery<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+            <!-- <div class="progress">
+              <span class="skill"><i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -231,6 +233,7 @@
               </div>
             </div>
           </div> -->
+          <!-- --------------------------------------------------------------------------- -->
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
               <span class="skill">CakePHP<i class="val">80%</i></span>
@@ -308,14 +311,14 @@
             </div>
           </div>
           <!-- front -->
-          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
-              <span class="skill">typescript<i class="val">80%</i></span>
+              <span class="skill">Cryptographie<i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
-
+            <!-- 
             <div class="progress">
               <span class="skill">JSON<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
@@ -342,63 +345,84 @@
     <div class="container">
 
       <div class="section-title">
-        <h2><i class="bx bx-folder"></i> Projet</h2>
+        <h2><i class="bx bx-folder"></i>Projet</h2>
         <p>
-          Cette Section contient la plupart de mes projets réalisés
+          Cette Section contient la plupart de mes projets réalisés avec du javaScript
         </p>
       </div>
 
       <div class="row">
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-          <div class="icon"><i class="bi bi-briefcase"></i></div>
-          <h4 class="title"><a href="projets/projet1/card-generator/index.html">GENERATEUR DE CARD</a></h4>
-          <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-        </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" id="card-generator">
           <div class="icon"><i class="bi bi-card-checklist"></i></div>
+          <h4 class="title"><a href="projets/projet1/card-generator/index.html">GENERATEUR DE CARD</a></h4>
+          <p class="description">
+            Cette section contient une application complète des notions de javaScript 
+            et les évènements. Appuyer sur
+            <i>+ Add new</i> pour voir
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100" id="password-generator">
+          <div class="icon"><i class="bi bi-card-list"></i></div>
           <h4 class="title"><a href="projets/projet1/generator-password/index.html">GENERATEUR DE MOT DE PASS</a></h4>
-          <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+          <p class="description">
+            ce projet contient des applications aussi avec mon apprentissage de javaScript.
+            Où on a la possibilité de contruire un mot de passe solide avec des choix personnalisés
+          </p>
         </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-          <div class="icon"><i class="bi bi-bar-chart"></i></div>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200" id="mover-sentences">
+          <div class="icon"><i class="bi bi-calendar4-week"></i></div>
           <h4 class="title"><a href="projets/projet1/mover-sentences/index.html">DEPLACEUR DE PHRASES</a></h4>
-          <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+          <p class="description">
+            deplacer des phrases par défilement
+          </p>
         </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300" id="quizz-app">
           <div class="icon"><i class="bi bi-binoculars"></i></div>
           <h4 class="title"><a href="projets/projet1/quizz/index.html">JEU DE QUIZZ</a></h4>
-          <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+          <p class="description">
+              Quiz app une application pour permettre à jouer et afficher le resultat en final
+          </p>
         </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="notification">
           <div class="icon"><i class="bi bi-brightness-high"></i></div>
-          <h4 class="title"><a href="">Nemo Enim1</a></h4>
-          <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+          <h4 class="title"><a href="projets/projet2/TP1-Notification/">générateurs de Notifications</a></h4>
+          <p class="description">
+            Cette section permet générer des Notification savec 
+            des couleurs appropiées.
+          </p>
         </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500" id="carrousse">
           <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-          <h4 class="title"><a href="">Eiusmod Tempor1</a></h4>
-          <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+          <h4 class="title"><a href="projets/projet2/caroussel-last-version/">carroussel</a></h4>
+          <p class="description">
+              générateur de Notifications avec des couleurs qui y va avec
+          </p>
         </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="compte-a-rebour">
           <div class="icon"><i class="bi bi-brightness-high"></i></div>
-          <h4 class="title"><a href="">Nemo Enim2</a></h4>
-          <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+          <h4 class="title"><a href="projets/projet2/TP4-Compte-Rebours/">compte à rebour</a></h4>
+          <p class="description">
+            Cette application permet de dire avec exactitude le nombre de jours,heures,minutes et secondes
+            de l'année prochaine          
+          </p>
         </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500" id="film">
           <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-          <h4 class="title"><a href="">Eiusmod Tempor2</a></h4>
-          <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+          <h4 class="title"><a href="projets/projet2/TP5-Manipulation-Api-Film/index.html">Film</a></h4>
+          <p class="description">
+            Cette section contient une liste de film.
+            Application de cours javaScript pour consommer un API.
+          </p>
         </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-          <div class="icon"><i class="bi bi-brightness-high"></i></div>
-          <h4 class="title"><a href="">Nemo Enim3</a></h4>
-          <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="recette">
+          <div class="icon"><i class="bi bi-prescription2"></i></div>
+          <h4 class="title"><a href="projets/projet2/TP6-Manipulation-API-Recette/index.html">Recette</a></h4>
+          <p class="description">
+          Cette section permet de générer des recette aléatoirement.
+          On peut à chaque recette voir les détails ainsi que la vidéo de préparation.
+          Application de cours javaScript pour consommer un API.
+        </p>
         </div>
-        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-          <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-          <h4 class="title"><a href="">Eiusmod Tempor3</a></h4>
-          <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-        </div>                
       </div>
 
     </div>
@@ -426,7 +450,7 @@
               <h5>Août 2022 - present</h5>
               <h4>développeur fullstack</h4>
               <p> 
-                <a href="https://www.orange.sn/orange-money">
+                <a href="">
                   <em>
                     chez <b>(ofms)</b> Orange Finances Mobiles Senegal
                   </em>
@@ -440,6 +464,28 @@
                 </ul>
                 <li>apporter quelques modifications sur une application déjà existée avec une technologies un peu vieille</li>
                 <li>mise en place d'une solution RPA, pour essayer de remplacer un travail qui se faisait de manières répétitives de manières manuelle</li>
+              </ul>
+            </div>
+            
+            <div class="resume-item">
+              <h4>développeur fullstack</h4>
+              <p> 
+                <a href="">
+                  <em>
+                    Un projet personnel
+                  </em>
+                </a>   
+              </p>
+              <ul>
+                <h3>GESTION DES EMPLOYES</h3>
+                <li>
+                  Cette application est une pratique après mon apprentissage des technologies <em>spring boot</em> et <em>reactJs</em>
+                  <i>j'ai utilisé les technologies suivantes :</i> 
+                </li>
+                <ul>
+                  <li><b>SPRING BOOT</b></li>
+                  <li><b>REACT</b></li>
+                </ul>
               </ul>
             </div>
             <div class="resume-item">
