--- a/projets/projet1/card-generator/index.html
+++ b/projets/projet1/card-generator/index.html
@@ -15,7 +15,7 @@
     <h1 style="text-align: center; color: #fff ;">Createur de nouveau élément</h1>
     <div style="text-align: center;">
         <h2>
-            <a href="/">
+            <a href="/#card-generator">
                 REVENIR AU PORTFOLIO
             </a>
         </h2>
