--- a/projets/projet1/generator-password/index.html
+++ b/projets/projet1/generator-password/index.html
@@ -15,7 +15,7 @@
     <h1>Générateur de password. Fais ton choix pour avoir ton mot de pass</h1>
     <div style="text-align: center;">
         <h2>
-            <a href="/">
+            <a href="/#password-generator">
                 REVENIR AU PORTFOLIO
             </a>
         </h2>
@@ -32,13 +32,13 @@
             </a>
         </div>
 
-        <div class="tp3">
+        <div class="tp3" >
             <a href="../mover-sentences/index.html">
                 DEPLACEUR DE PHRASES
             </a>
         </div>
         <div class="tp4">
-            <a href="../quizz/index.html">
+            <a href="/#password-generator">
                 QUIZZ
             </a>
         </div>
