--- a/projets/projet1/mover-sentences/index.html
+++ b/projets/projet1/mover-sentences/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <h2 style="text-align: center;">
-        <a href="/">
+        <a href="/#mover-sentences">
             REVENIR AU PORTFOLIO
         </a>
     </h2>
