--- a/projets/projet1/quizz/index.html
+++ b/projets/projet1/quizz/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <h2>
-        <a href="/">
+        <a href="/#quizz-app">
             REVENIR AU PORTFOLIO
         </a>
     </h2>
