--- a/projets/projet2/TP1-Notification/index.html
+++ b/projets/projet2/TP1-Notification/index.html
@@ -8,6 +8,11 @@
     <title>TP-1</title>
 </head>
 <body>
+    <h2 style="text-align: center;">
+        <a href="/#notification">
+            REVENIR AU PORTFOLIO
+        </a>
+    </h2>
     <div class="containt-button">
         <button>Notification Success</button>
         <button>Notification Danger</button>
