--- a/projets/projet2/TP3-Caroussel/index.html
+++ b/projets/projet2/TP3-Caroussel/index.html
@@ -8,6 +8,11 @@
     <title>TP-3 carroussel</title>
 </head>
 <body>
+    <h2 style="text-align: center;">
+        <a href="/#carrousse">
+            REVENIR AU PORTFOLIO
+        </a>
+    </h2>
     <div class="caroussel">
         <button class="caroussel_button carousel-left"> < </button>
         <div class="slide-containner"> <!-- caroussel_track-containner -->
