--- a/projets/projet2/TP5-Manipulation-Api-Film/index.html
+++ b/projets/projet2/TP5-Manipulation-Api-Film/index.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+    <h2 style="text-align: center; margin-top: 2rem;">
+        <a href="/#film">
+            REVENIR AU PORTFOLIO
+        </a>
+    </h2>
     <header>
         <form action="" method="post">
             <div class="search">
