--- a/projets/projet2/TP6-Manipulation-API-Recette/index.html
+++ b/projets/projet2/TP6-Manipulation-API-Recette/index.html
@@ -13,6 +13,11 @@
 
 <body>
     <div class="container">
+        <h2 style="text-align: center; margin-top: 2rem;">
+            <a href="/#recette">
+                REVENIR AU PORTFOLIO
+            </a>
+        </h2>
         <div class="header-party">
             <form action="" method="GET">
                 <div class="search">
