--- a/projets/projet2/caroussel-last-version/index.html
+++ b/projets/projet2/caroussel-last-version/index.html
@@ -7,8 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<h2 style="text-align: center; margin-top: 2rem;">
+        <a href="/#carrousse">
+            REVENIR AU PORTFOLIO
+        </a>
+    </h2>
 	<header><h1>carroussel</h1></header>
-	
 <div class="div1" id="containerSecond">
 	
 	<div class="divButton">
