--- a/projets/projet2/TP4-Compte-Rebours/index.html
+++ b/projets/projet2/TP4-Compte-Rebours/index.html
@@ -11,6 +11,11 @@
 
 <body>
     <div class="container">
+        <h2 style="text-align: center; margin-top: 2rem;">
+            <a href="/#compte-a-rebour">
+                REVENIR AU PORTFOLIO
+            </a>
+        </h2>
         <h3>On sera en <span id="next-year"></span> dans</h3>
         <div id="count-dounw">
 
