mettre à jour le formulaire

--- a/index.html
+++ b/index.html
@@ -673,15 +673,15 @@
               </div>
               <div class="form-group">
                 <label for="name">Objet de votre mail</label>
-                <input type="text" class="form-control" name="_subject" id="subject" required>
+                <input placeholder="votre objet" type="text" class="form-control" name="_subject" id="subject" required>
               </div>
               <div class="form-group">
                 <label for="name">téléphone</label>
-                <input type="tel" placeholder="77 195 87 13" class="form-control" name="phone" id="subject">
+                <input type="tel" placeholder="+221 77 195 87 13" class="form-control" name="phone" id="subject">
               </div>
               <div class="form-group">
                 <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
+                <textarea placeholder="message " class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
