mettre à jour le formulaire placeholder

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Prenom et nom</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
+                  <input placeholder="Khadim NIASS" type="text" name="name" class="form-control" id="name" required>
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
@@ -688,7 +688,9 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-group">Send Message</button>
+              </div>
             </form>
           </div>
 
