--- a/projets/projet1/generator-password/index.html
+++ b/projets/projet1/generator-password/index.html
@@ -32,13 +32,13 @@
             </a>
         </div>
 
-        <div class="tp3" >
+        <div class="tp3" id="mover-sentences">
             <a href="../mover-sentences/index.html">
                 DEPLACEUR DE PHRASES
             </a>
         </div>
         <div class="tp4">
-            <a href="/#password-generator">
+            <a href="../quizz/index.html">
                 QUIZZ
             </a>
         </div>
