ajouter des icones pour les tittres

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
       </div>
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-abacus"></i> <span>Experiences</span></a></li>
-          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Compétences</span></a></li>
-          <li><a href="#projet" class="nav-link scrollto"><i class="bx bx-folder"></i><span>Projets</span></a></li>
+          <li><a href="#hero" class="nav-link scrollto active" title="retourner à home"><i class="bx bx-home"></i><span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto" title="à propos de moi"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto" title="voir mes experiences"><i class="bx bx-abacus" ></i> <span>Experiences</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto" title="voir mes compétences"><i class="bx bx-file-blank"></i> <span>Compétences</span></a></li>
+          <li><a href="#projet" class="nav-link scrollto" title="voir mes réalisations"><i class="bx bx-folder"></i><span>Projets</span></a></li>
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
-          <li><a href="#editeur" class="nav-link scrollto"><i class="bx bx-edit"></i> <span>mes éditeurs</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="#editeur" class="nav-link scrollto" title="liste de mes quelques éditeurs"><i class="bx bx-edit"></i> <span>mes éditeurs</span></a></li>
+          <li><a href="#services" class="nav-link scrollto" title="mes services que je donne"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto" title="contacter moi, remplir le formulaire"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -140,7 +140,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Compétences</h2>
+          <h2><i class="bx bx-file-blank"></i> Compétences</h2>
         </div>
         <div class="row skills-content">
           <div class="col-lg-6" data-aos="fade-up">
@@ -437,7 +437,11 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Experiences</h2>
+          
+          <h2>
+            <i class="bx bx-abacus" ></i>
+            Experiences
+          </h2>
           <!-- <p>
             Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.
           </p> -->
@@ -559,7 +563,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>mes éditeurs favoris</h2>
+          <h2><i class="bx bx-edit"></i> mes éditeurs favoris</h2>
         </div>
 
         <div class="row">
@@ -596,7 +600,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
+          <h2><i class="bx bx-server"></i> Services</h2>
         </div>
 
         <div class="row">
@@ -626,7 +630,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2><i class="bx bx-envelope"></i> Contact</h2>
             vous pouvez me contacter directement via ce formulaire de contact 👍
         </div>
 
