--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>KHADIM NIASS</h1>
-      <p>Je suis <span class="typed" data-typed-items="Developer fullstack,developeur Web,Developeur mobile, Freelancer"></span></p>
+      <p class="text-center"><span class="typed" data-typed-items="Je suis Developer fullstack,je suis developeur Web,Je suisDevelopeur mobile,je suis Freelancer"></span></p>
     </div>
     <a href="tel:+221771958713"><i class="bi bi-telephone"></i>  +221 77 195 87 13</a>
     <a href="mailto:niassssn@gmail.com"><i class="bi bi-envelope"></i> niassssn@gmail.com</a>
@@ -88,26 +88,25 @@
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
             <!-- photo du about -->
-            <img src="assets/img/my_puctures/profile_Khadim Niass.jpeg" class="img-fluid" alt="photo de presentation">
+            <!-- <img src="assets/img/my_puctures/profile_Khadim Niass.jpeg" class="img-fluid" alt="photo de presentation"> -->
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Web Developer fullstack web &amp; mobile</h3>
+            <h3>Développeur web fullstack web &amp; mobile</h3>
             <p class="fst-italic">
               En tant que développeur je suis passionné et veux toujours reveler de nouveaux défis
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 Juin 1998</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+221 77 195 87 13</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Addresse:</strong> <span>Dakar,</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Niveau d'étude:</strong> <span>LICENCE</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Emails:</strong><a href="mailto:niassssn@gmail.com">niassssn@gmail.com</a>, <a href="mailto:khadim1.niass@ucad.edu.sn">khadim1.niass@ucad.edu.sn</a></li>
+                  <li><i class="bi bi-chevron-right"></i><strong>Téléphone:</strong><span>+221 77 195 87 13</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>niveau d'étude:</strong> <span>Licence</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>email:</strong> <span>niassssn@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>disponible</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i><strong>Téléphone:</strong><span>+221 77 195 87 13</span></li> -->
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Addresse:</strong> <span>Dakar,</span></li> -->
                 </ul>
               </div>
             </div>
@@ -343,7 +342,6 @@
   <!-- ======= begin PROJET Section ======= -->
   <section id="projet" class="services">
     <div class="container">
-
       <div class="section-title">
         <h2><i class="bx bx-folder"></i>Projet</h2>
         <p>
@@ -423,30 +421,29 @@
           Application de cours javaScript pour consommer un API.
         </p>
         </div>
+
+        <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="trello">
+          <div class="icon"><i class="bi bi-prescription2"></i></div>
+          <h4 class="title"><a href="projets/trello/index.html">Trello </a></h4>
+          <p class="description">
+           Cette application est la clone de <i>TRELLO</i>
+           générateur de card, et beaucoup d'autres applications
+           de javaScript
+          </p>
+        </div>
       </div>
 
     </div>
   </section>
   <!-- End projet Section -->
-  
-
-
-
-
     <section id="resume" class="resume">
       <div class="container">
-
         <div class="section-title">
-          
           <h2>
             <i class="bx bx-abacus" ></i>
             Experiences
           </h2>
-          <!-- <p>
-            Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.
-          </p> -->
         </div>
-
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
