reorganiser le css

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             </div>
           </div> -->
           <!-- --------------------------------------------------------------------------- -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
               <span class="skill">CakePHP<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
@@ -255,7 +255,7 @@
             </div>
 
           </div>
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="" data-aos="fade-up" data-aos-delay="100">
             <!-- <div class="progress">
               <span class="skill">front skill<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
@@ -276,7 +276,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
               <span class="skill">GIT<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
@@ -310,7 +310,7 @@
             </div>
           </div>
           <!-- front -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
               <span class="skill">Cryptographie<i class="val">75%</i></span>
               <div class="progress-bar-wrap">
