--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
         <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400" id="trello">
           <div class="icon"><i class="bi bi-prescription2"></i></div>
-          <h4 class="title"><a href="projets/trello/index.html">Trello </a></h4>
+          <h4 class="title"><a href="projets/trello">Trello </a></h4>
           <p class="description">
            Cette application est la clone de <i>TRELLO</i>
            générateur de card, et beaucoup d'autres applications
@@ -432,7 +432,6 @@
           </p>
         </div>
       </div>
-
     </div>
   </section>
   <!-- End projet Section -->
