modifier les titres d'en haut

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#skills" class="nav-link scrollto" title="voir mes compétences"><i class="bx bx-file-blank"></i> <span>Compétences</span></a></li>
           <li><a href="#projet" class="nav-link scrollto" title="voir mes réalisations"><i class="bx bx-folder"></i><span>Projets</span></a></li>
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
-          <li><a href="#editeur" class="nav-link scrollto" title="liste de mes quelques éditeurs"><i class="bx bx-edit"></i> <span>mes éditeurs</span></a></li>
+          <li><a href="#editeur" class="nav-link scrollto" title="liste de mes quelques éditeurs"><i class="bx bx-edit"></i> <span>Mes Editeurs</span></a></li>
           <li><a href="#services" class="nav-link scrollto" title="mes services que je donne"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto" title="contacter moi, remplir le formulaire"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -66,7 +66,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>KHADIM NIASS</h1>
-      <p class="text-center"><span class="typed" data-typed-items="Je suis Developer fullstack,je suis developeur Web,Je suisDevelopeur mobile,je suis Freelancer"></span></p>
+      <p class="text-center"><span class="typed" data-typed-items="je suis développeur fullstack,Je suis développeur Web,je suis développeur mobile"></span></p>
     </div>
     <a href="tel:+221771958713"><i class="bi bi-telephone"></i>  +221 77 195 87 13</a>
     <a href="mailto:niassssn@gmail.com"><i class="bi bi-envelope"></i> niassssn@gmail.com</a>
@@ -559,7 +559,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2><i class="bx bx-edit"></i> mes éditeurs favoris</h2>
+          <h2><i class="bx bx-edit"></i> Mes éditeurs favoris</h2>
         </div>
 
         <div class="row">
