--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/my_puctures/profile_Khadim Niass.jpeg" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/mobile-icone.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -43,7 +43,7 @@
           <a href="https://gitlab.com/niassssn" class="gitlab"><i class="bx bxl-gitlab"></i></a>
           <a href="live:.cid.35917ce0ce1e8434" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://linkedin.com/in/khadim-niass" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/khadimniass?tab=repositories" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/khadimniass" class="github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
       <nav id="navbar" class="nav-menu navbar">
@@ -54,12 +54,14 @@
           <li><a href="#skills" class="nav-link scrollto" title="voir mes compétences"><i class="bx bx-file-blank"></i> <span>Compétences</span></a></li>
           <li><a href="#projet" class="nav-link scrollto" title="voir mes réalisations"><i class="bx bx-folder"></i><span>Projets</span></a></li>
           <li><a href="#editeur" class="nav-link scrollto" title="liste de mes quelques éditeurs"><i class="bx bx-edit"></i> <span>Mes Editeurs</span></a></li>
+          <li><a href="#certificats" class="nav-link scrollto" title="mes certifications optenus en ligne"><i class="bx bx-certification"></i> <span>Certification</span></a></li>
           <li><a href="#services" class="nav-link scrollto" title="mes services que je donne"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto" title="contacter moi, remplir le formulaire"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
   </header>
+
   <!-- End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
@@ -77,7 +79,7 @@
       </p>
     </div>
     <a href="tel:+221771958713"><i class="bi bi-telephone"></i>  +221 77 195 87 13</a>
-    <a href="mailto:niassssn@gmail.com"><i class="bi bi-envelope"></i> niassssn@gmail.com</a>
+    <a href="mailto:niassssn@gmail.com"><i class="bi bi-envelope"></i>niassssn@gmail.com</a>
   </section><!-- End Hero -->
 
   <main id="main">
@@ -385,8 +387,9 @@
     </div>
   </section>
   <!-- End Skills Section -->
+  
 
-
+<!-- =========== End certificats ============== -->
   <!-- ======= begin PROJET Section ======= -->
   <section id="projet" class="services">
     <div class="container">
@@ -525,7 +528,7 @@
                 </a>   
               </p>
               <ul>
-                <h3>GESTION DES EMPLOYES</h3>
+                <span class="text-bg-info">GESTION DES EMPLOYES</span>
                 <li>
                   Cette application est une pratique après mon apprentissage des technologies <em>spring boot</em> et <em>reactJs</em>
                   <i>j'ai utilisé les technologies suivantes :</i> 
@@ -594,22 +597,78 @@
     </section>
     <!-- End Resume Section -->
     
-    <div name="" id="">
+    <!-- ======= begin certificats ============ -->
+  <section class="ftco-section" id="certificats">
+    <div class="container">
+      <div class="section-title">
+        <h2>
+          <i class="bx bx-certification" ></i>
+          Certifications
+        </h2>
+        <p class="description fs-2">Cette section contient quelques certification obtenus en ligne</p>
+      </div>
+      <div class="row ftco-custom-gutters">
+
+        <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
+          <a   class="ftco-thumbnail image-popup">
+            <img src="assets/img/certificats/bootstrapp5.png" title="certificat en bootrapp 5" alt="bootstrap 5" class="img-fluid">
+          </a>
+        </div>
+        <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
+          <a   class="ftco-thumbnail image-popup">
+            <img src="assets/img/certificats/reactJS.png" alt="reactJS" title="certificat en reactJS" class="img-fluid">
+          </a>
+        </div>
+        <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
+          <a   class="ftco-thumbnail image-popup">
+            <img src="assets/img/certificats/certificat-mern.png" alt="react-full" title="certificat en react MERN" class="img-fluid">
+          </a>
+        </div>
+
+        <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
+          <a   class="ftco-thumbnail image-popup">
+            <img src="assets/img/certificats/vueJs3.png" alt="vueJs3" title="certificat en vueJS" class="img-fluid">
+          </a>
+        </div>
+        <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
+          <a   class="ftco-thumbnail image-popup">
+            <img src="assets/img/certificats/laravel9.png" alt="laravel9" title="certificat en Laravel9" class="img-fluid">
+          </a>
+        </div>
+        <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
+          <a   class="ftco-thumbnail image-popup">
+            <img src="assets/img/certificats/flutter.png" alt="flutter" title="certificat en flutter" class="img-fluid">
+          </a>
+        </div>
+        <div class="col-md-4 mb-2 ftco-animate fadeInUp ftco-animated certificat-hovered">
+          <a   class="ftco-thumbnail image-popup">
+            <img src="assets/img/certificats/spring-boot.png" alt="spring-boot" title="certificat en spring-boot" class="img-fluid">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ========== ends certificats  ========== -->
+
+  <!-- ======= begin éditeur ======= -->
+  <div class="row ftco-custom-gutters">
+
+    <div class="col-md-6 ftco-animate fadeInUp ftco-animated border">
       <p>
         <a href="https://github.com/khadimniass/">Mes depot github</a>
       </p>
+        <img src="assets/img/accuil_git.png" title="une capture de mes depots github" alt="accuil github" class="img-fluid">
+    </div>
 
-      <img src="assets/img/accuil_git.png" alt="accuil github" class="img-fluid">
+    <div class="col-md-6 ftco-animate fadeInUp ftco-animated border">
       <p>
         <a href="https://openclassrooms.com/fr/dashboard">Mes formation openclassroom</a>
       </p>
-      <img src="assets/img/openclassroom.png" alt="accuil openclassroom" class="img-fluid">
+      <img src="assets/img/openclassroom.png" alt="accuil openclassroom" title="mon dahbord Openclassroom" class="img-fluid">
+  </div>
 
-    </div>
-    <div class="text-center">
-      <img src="assets/img/certificat-mern.png" alt="accuil openclassroom" class="img-fluid">
-    </div>
-     <!-- ======= begin éditeur ======= -->
+  </div>
+      
      <section id="editeur" class="services">
       <div class="container">
 
