--- a/index.html
+++ b/index.html
@@ -767,14 +767,18 @@
 
       </div>
     </section><!-- End Contact Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright text-muted">
+        &copy; Copyright <strong><span>Khadim NIASS</span></strong>
+      </div>
+    </div>
+  </footer>
   <!-- End  Footer -->
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
